[gd_scene format=3 uid="uid://b2wrgyetcvlpg"]

[ext_resource type="Script" uid="uid://bnpdx4jgis0am" path="res://main-scene/main_scene.gd" id="1_dg3ai"]
[ext_resource type="Texture2D" uid="uid://c3j5l71pj5h37" path="res://assets/images/background3.png" id="2_agv4w"]
[ext_resource type="FontFile" uid="uid://cpwm7d3lrhrkk" path="res://assets/PixelifySans-Regular.ttf" id="3_agv4w"]

[node name="Menu" type="Control" unique_id=1915823750]
layout_mode = 3
anchor_right = 1.00174
anchor_bottom = 1.00309
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_dg3ai")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="." unique_id=901923695]
texture_filter = 1
texture_repeat = 2
layout_mode = 0
offset_top = -4.0
offset_right = 1928.0
offset_bottom = 1089.0
texture = ExtResource("2_agv4w")
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1595037612]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 89.0
offset_top = 31.0
offset_right = -952.341
offset_bottom = -77.3373
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=255626059]
layout_mode = 2
size_flags_vertical = 8

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1001904269]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.894118, 0.894118, 0.894118, 1)
theme_override_fonts/font = ExtResource("3_agv4w")
theme_override_font_sizes/font_size = 80
text = "Play"
alignment = 0

[node name="CloseGame" type="Button" parent="MarginContainer/VBoxContainer" unique_id=291279911]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.894118, 0.894118, 0.894118, 1)
theme_override_fonts/font = ExtResource("3_agv4w")
theme_override_font_sizes/font_size = 80
text = "Exit"
alignment = 0

[node name="TitleText" type="RichTextLabel" parent="MarginContainer" unique_id=639240849]
layout_mode = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("3_agv4w")
theme_override_font_sizes/normal_font_size = 100
text = "Blackjack




"

[node name="Creds" type="Label" parent="." unique_id=847209520]
layout_mode = 0
offset_left = 99.0
offset_top = 1096.0
offset_right = 444.0
offset_bottom = 1127.0
theme_override_colors/font_color = Color(0.894118, 0.894118, 0.894118, 1)
theme_override_font_sizes/font_size = 20
text = "By Braedon McRae & Andrew Meier
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CloseGame" to="." method="_on_close_game_pressed"]
